--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ether": "^0.0.9",
+    "ethers": "^5.5.1",
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.2.0",
