--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "codacy-coverage": "^3.4.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
     "ether": "^0.0.9",
