--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
   },
   "dependencies": {
+    "agenda": "^4.2.1",
     "bcrypt": "^3.0.6",
     "codacy-coverage": "^3.4.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
-    "cron": "^1.8.2",
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
     "ether": "^0.0.9",
@@ -26,8 +26,10 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.3.1",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "truffle-hdwallet-provider": "^1.0.17",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
