--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
     "nodemailer": "^6.3.1",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "truffle-hdwallet-provider": "^1.0.17",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
