--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native-rename": "^2.9.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
