--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "ethers": "5.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
