--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "ethers": "5.4.5",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "react-native-rename": "^2.9.0",
     "react-scripts": "4.0.0"
