--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "sass": "^1.45.0",
     "typescript": "4.1.3"
   },
   "scripts": {
