--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,9 @@
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=production react-scripts start",
     "dev": "react-scripts start --hot --open",
+    "prod": "NODE_ENV=production react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
