--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,12 @@
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@uniswap/sdk": "^3.0.3",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "axios": "^0.24.0",
     "bcrypt": "^3.0.6",
     "codacy-coverage": "^3.4.0",
     "cookie-parser": "~1.4.3",
@@ -23,6 +29,8 @@
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.2.0",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.24.0",
@@ -31,6 +39,7 @@
     "node-cron": "^3.0.0",
     "nodemailer": "^6.3.1",
     "socket.io": "^4.4.0",
+    "web3": "^1.6.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
