--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
+    "esm": "^3.2.25",
     "ether": "^0.0.9",
     "ethers": "^5.5.2",
     "express": "~4.16.0",
