--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "apollo-link-http": "^1.5.17",
     "axios": "^0.24.0",
     "bcrypt": "^3.0.6",
+    "bignumber": "^1.1.0",
     "codacy-coverage": "^3.4.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
