--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "ethers": "5.4.5",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "17.0.2",
     "react-native-rename": "^2.9.0",
     "react-scripts": "4.0.0",
+    "recharts": "^2.1.8",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
   },
