--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "antd": "^4.18.5",
     "axios": "^0.25.0",
     "bootstrap": "^3.4.1",
     "ethers": "5.4.5",
