--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-native-rename": "^2.9.0",
     "react-scripts": "4.0.0",
+    "react-switch": "^6.0.0",
     "recharts": "^2.1.8",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
