--- a/src/package.json
+++ b/src/package.json
@@ -54,6 +54,7 @@
     "eslint": "^6.5.1",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "typescript": "^4.5.5"
   }
 }
