--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "tsc && node app.js",
+    "dev": "tsc && nodemon app.js",
     "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
   },
@@ -17,7 +17,6 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
-    "axios": "^0.24.0",
     "bcrypt": "^3.0.8",
     "bignumber": "^1.1.0",
     "bignumber.js": "^9.0.2",
@@ -49,12 +48,12 @@
     "ws": "^8.4.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^6.5.1",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
-    "nyc": "^14.1.1",
-    "typescript": "^4.5.5"
+    "nyc": "^14.1.1"
   }
 }
