--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,8 +5,11 @@
       "target": "es6",
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "dist"
+      "types": ["node"]
     },
+    "include": [
+      "**/*"
+    ],
     "lib": ["es2015"]
 }
   
